--- a/app/src/main/res/layout/activity_listitem.xml
+++ b/app/src/main/res/layout/activity_listitem.xml
@@ -15,8 +15,35 @@
     card_view:contentPadding="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clickconstraint"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:background="#FFC4C4"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/click_textview"
+            style="@style/Widget.AppCompat.TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:gravity="center"
+            android:text="Clique Aqui"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/normalconstraint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/title_textview"
@@ -49,6 +76,16 @@
                 android:layout_marginBottom="8dp"
                 android:text="Line 2"
                 android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/date_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right|end"
+                android:autoText="false"
+                android:gravity="bottom|right|end"
+                android:text="Line 2"
+                android:textSize="14sp" />
         </LinearLayout>
 
         <ImageView
